Add Microsoft Authentication to Mobile Login/Registration - LEARNER-3877

--- a/OpenEdXMobile/AndroidManifest.xml
+++ b/OpenEdXMobile/AndroidManifest.xml
@@ -81,6 +81,19 @@
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar.TranslucentStatusBar" />
 
+        <!--Intent filter to capture System Browser or Authenticator calling back to our app after sign-in-->
+        <activity
+            android:name="com.microsoft.identity.client.BrowserTabActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="msauth"
+                    android:host="org.edx.mobile"
+                    android:path="place_signature_hash" />
+            </intent-filter>
+        </activity>
+
         <activity
             android:name="org.edx.mobile.view.MainDashboardActivity"
             android:theme="@style/AppTheme.NoActionBar.TranslucentStatusBar" />
