--- a/OpenEdXMobile/default_config/config.yaml
+++ b/OpenEdXMobile/default_config/config.yaml
@@ -4,3 +4,12 @@ PLATFORM_NAME: 'Smart Edoo'
 PLATFORM_DESTINATION_NAME: 'online.smartedoo.co.ke'
 FEEDBACK_EMAIL_ADDRESS: 'support@smartedoo.co.ke'
 OAUTH_CLIENT_ID: 'niKKPd3jwflUaPOZeUAMP9LyQPow9MDVD0c9DczW'
+
+
+
+
+PROJECT_NUMBER: ""
+PROJECT_ID: ""
+OAUTH_CLIENT_ID: ""
+CURRENT_KEY: ""
+MOBILE_SDK_APP_ID: ""
