--- a/OpenEdXMobile/default_config/config.yaml
+++ b/OpenEdXMobile/default_config/config.yaml
@@ -3,7 +3,7 @@ ENVIRONMENT_DISPLAY_NAME: 'Smart Env'
 PLATFORM_NAME: 'Smart Edoo'
 PLATFORM_DESTINATION_NAME: 'online.smartedoo.co.ke'
 FEEDBACK_EMAIL_ADDRESS: 'support@smartedoo.co.ke'
-OAUTH_CLIENT_ID: 'niKKPd3jwflUaPOZeUAMP9LyQPow9MDVD0c9DczW'
+OAUTH_CLIENT_ID: '#'
 
 
 
