--- a/OpenEdXMobile/build.gradle
+++ b/OpenEdXMobile/build.gradle
@@ -182,6 +182,7 @@ dependencies {
     implementation 'uk.co.chrisjenx:calligraphy:2.1.0'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation ('com.github.bumptech.glide:okhttp3-integration:4.11.0')
+    implementation 'com.mikhaellopez:circularimageview:4.2.0'
 
     // Segment Library
     implementation 'com.segment.analytics.android:analytics:4.2.6'
@@ -248,6 +249,17 @@ dependencies {
         exclude group: 'org.hamcrest'
     }
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:${KOTLIN_VERSION}"
+
+    implementation 'com.androidstudy:daraja:1.0.2'
+    def room_version = "2.2.5"
+
+    implementation "androidx.room:room-runtime:$room_version"
+
+    implementation 'android.arch.persistence.room:runtime:1.1.1'
+    annotationProcessor 'android.arch.persistence.room:compiler:1.1.1'
+    implementation 'com.github.GrenderG:Toasty:1.4.2'
+    implementation 'com.google.firebase:firebase-database:19.3.1'
+
 }
 
 configurations {
