--- a/OpenEdXMobile/build.gradle
+++ b/OpenEdXMobile/build.gradle
@@ -259,6 +259,7 @@ dependencies {
     annotationProcessor 'android.arch.persistence.room:compiler:1.1.1'
     implementation 'com.github.GrenderG:Toasty:1.4.2'
     implementation 'com.google.firebase:firebase-database:19.3.1'
+    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
 
 }
 
